Some https enforcement and extract uuid utils